Language: Add new language terms

--- a/translations/messages.pot
+++ b/translations/messages.pot
@@ -28016,3 +28016,9 @@ msgstr ""
 
 msgid "Session coaches are coordinators for the session and can act as tutor for each of the course in the session. Only users with the teacher role can be selected as session coach."
 msgstr ""
+
+msgid "Introduction to registration"
+msgstr ""
+
+msgid "Welcome to the registration process."
+msgstr ""
