--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -28030,3 +28030,9 @@ msgstr "Not subscribed"
 
 msgid "Session coaches are coordinators for the session and can act as tutor for each of the course in the session. Only users with the teacher role can be selected as session coach."
 msgstr "Session coaches are coordinators for the session and can act as tutor for each of the course in the session. Only users with the teacher role can be selected as session coach."
+
+msgid "Introduction to registration"
+msgstr "Introduction to registration"
+
+msgid "Welcome to the registration process."
+msgstr "Welcome to the registration process."
