Language: Update language terms for VueJS

--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -156,7 +156,7 @@
     "Start Date": "Fecha de inicio",
     "No course available": "Sin cursos disponibles",
     "There are no sessions available": "No hay a\u00fan una sesi\u00f3n",
-    "Loading courses. Please wait.": "Loading courses. Please wait.",
+    "Loading courses. Please wait.": "Cargando lecciones. Por favor, espere.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
     "Send diagnostic finalization message": "Enviar el mensaje de finalizaci\u00f3n del diagn\u00f3stico",
@@ -327,8 +327,8 @@
     "Database Host": "Host de la base de datos",
     "Database Login": "Nombre de usuario de la base de datos",
     "Database Password": "Contrase\u00f1a de la base de datos",
-    "Step 7 - Installation process execution": "Step 7 - Installation process execution",
-    "Step 7 - Update process execution": "Step 7 - Update process execution",
+    "Step 7 - Installation process execution": "Paso 7 - Ejecuci\u00f3n del proceso de instalaci\u00f3n",
+    "Step 7 - Update process execution": "Paso 7 - Ejecuci\u00f3n del proceso de actualizaci\u00f3n",
     "Security advice": "Aviso de seguridad",
     "Menu": "Men\u00fa",
     "Created with Chamilo copyright year": "Creado con Chamilo \u00a9 {0}",
@@ -582,29 +582,29 @@
     "Add reminder": "A\u00f1adir recordatorios",
     "Update introduction links": "Actualizar enlaces de introducci\u00f3n",
     "Conference Room": "Sala de conferencias",
-    "Please wait, this could take a while...": "Please wait, this could take a while...",
-    "Replace (files only)": "Replace (files only)",
-    "Select replacement file": "Select replacement file",
-    "No file selected.": "No file selected.",
-    "Only files can be replaced.": "Only files can be replaced.",
-    "Error replacing file.": "Error replacing file.",
-    "Download selected items as ZIP": "Download selected items as ZIP",
-    "No items selected.": "No items selected.",
-    "Download started": "Download started",
-    "Error downloading selected items.": "Error downloading selected items.",
-    "Remove current icon": "Remove current icon",
-    "This icon will show for the link displayed as a tool on the course homepage.": "This icon will show for the link displayed as a tool on the course homepage.",
-    "The icon must be 120x120 pixels.": "The icon must be 120x120 pixels.",
-    "Error saving the link": "Error saving the link",
-    "Enter 2FA code": "Enter 2FA code",
-    "Submit code": "Submit code",
-    "Sign up": "Sign up",
-    "2FA disabled successfully.": "2FA disabled successfully.",
-    "Passwords do not match": "Passwords do not match",
-    "Password updated successfully": "Password updated successfully",
-    "Update settings": "Update settings",
-    "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
-    "QR code for 2FA": "QR code for 2FA",
-    "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Please wait, this could take a while...": "Por favor espere, esto podr\u00eda tardar un rato...",
+    "Replace (files only)": "Reemplazar (solo archivos)",
+    "Select replacement file": "Seleccione el archivo de reemplazo",
+    "No file selected.": "Ning\u00fan archivo seleccionado.",
+    "Only files can be replaced.": "Solo se pueden reemplazar archivos.",
+    "Error replacing file.": "Error al reemplazar el archivo.",
+    "Download selected items as ZIP": "Descargar elementos seleccionados como ZIP",
+    "No items selected.": "No se han seleccionado elementos.",
+    "Download started": "Descarga iniciada",
+    "Error downloading selected items.": "Error al descargar los elementos seleccionados.",
+    "Remove current icon": "Eliminar icono actual",
+    "This icon will show for the link displayed as a tool on the course homepage.": "Este icono se mostrar\u00e1 para el enlace que aparece como una herramienta en la p\u00e1gina principal del curso.",
+    "The icon must be 120x120 pixels.": "El icono debe ser de 120x120 p\u00edxeles.",
+    "Error saving the link": "Error al guardar el enlace",
+    "Enter 2FA code": "Ingrese el c\u00f3digo de 2FA",
+    "Submit code": "Enviar c\u00f3digo",
+    "Sign up": "Reg\u00edstrese",
+    "2FA disabled successfully.": "Su autenticaci\u00f3n de dos factores ha sido desactivada.",
+    "Passwords do not match": "Las contrase\u00f1as no coinciden",
+    "Password updated successfully": "Contrase\u00f1a actualizada",
+    "Update settings": "Actualizar configuraci\u00f3n",
+    "Scan the QR code to enable 2FA": "Escanee el c\u00f3digo QR para activar la autenticaci\u00f3n de dos factores",
+    "QR code for 2FA": "C\u00f3digo QR para 2FA",
+    "Private course": "Curso privado",
+    "Not subscribed": "No inscrito"
 }
