--- a/assets/locales/fr_FR.json
+++ b/assets/locales/fr_FR.json
@@ -7,7 +7,7 @@
     "Course description": "Description du cours",
     "Course progress": "Progression du cours",
     "Documents": "Documents",
-    "Tests": "Tests",
+    "Tests": "Exercices",
     "Forum": "Forums",
     "Glossary": "Glossaire",
     "Link": "Lien",
@@ -141,7 +141,7 @@
     "Expand": "D\u00e9plier",
     "Collapse": "Replier",
     "Clear filter results": "Nettoyer le filtre de r\u00e9sultats",
-    "Coach": "Coach",
+    "Coach": "Tuteur",
     "Ranking": "Note",
     "Teachers": "Formateurs du cours",
     "Categories": "Cat\u00e9gories",
@@ -156,7 +156,7 @@
     "Start Date": "Date de d\u00e9but",
     "No course available": "Pas de cours",
     "There are no sessions available": "Il n'y a pas encore de session",
-    "Loading courses. Please wait.": "Loading courses. Please wait.",
+    "Loading courses. Please wait.": "Chargement des cours. Veuillez patienter.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
     "Send diagnostic finalization message": "Envoyer le message de finalisation du diagnostic",
@@ -180,7 +180,7 @@
     "Read the installation guide": "consultez le guide d'installation",
     "Installation language": "Langue d'installation",
     "Requirements": "Pr\u00e9-requis",
-    "License": "License",
+    "License": "Licence",
     "Database settings": "Param\u00e8tres de base de donn\u00e9es",
     "Config settings": "Param\u00e8tres de config",
     "Show Overview": "R\u00e9capitulatif",
@@ -327,8 +327,8 @@
     "Database Host": "H\u00f4te du serveur de bases de donn\u00e9es",
     "Database Login": "Utilisateur base de donn\u00e9es",
     "Database Password": "Mot de passe base de donn\u00e9es",
-    "Step 7 - Installation process execution": "Step 7 - Installation process execution",
-    "Step 7 - Update process execution": "Step 7 - Update process execution",
+    "Step 7 - Installation process execution": "\u00c9tape 7 - Ex\u00e9cution du processus d'installation",
+    "Step 7 - Update process execution": "\u00c9tape 7 - Ex\u00e9cution du processus de mise \u00e0 jour",
     "Security advice": "Conseil de s\u00e9curit\u00e9",
     "Menu": "Menu",
     "Created with Chamilo copyright year": "Cr\u00e9\u00e9 avec Chamilo \u00a9 {0}",
@@ -569,7 +569,7 @@
     "All Messages": "Tous les messages",
     "Promoted Messages": "Messages promus",
     "Are you sure you want to delete %s?": "\u00cates-vous certains de vouloir supprimer {0}\u202f?",
-    "%s's picture": "{0}'s picture",
+    "%s's picture": "Photo de {0}",
     "+%d": "+{0}",
     "%d minutes before": "{0} minutes avant",
     "%d hours before": "{0} heures avant",
@@ -582,29 +582,29 @@
     "Add reminder": "Ajouter une notification",
     "Update introduction links": "Mettre \u00e0 jour les liens de l'introduction",
     "Conference Room": "Salle de conf\u00e9rence",
-    "Please wait, this could take a while...": "Please wait, this could take a while...",
-    "Replace (files only)": "Replace (files only)",
-    "Select replacement file": "Select replacement file",
-    "No file selected.": "No file selected.",
-    "Only files can be replaced.": "Only files can be replaced.",
-    "Error replacing file.": "Error replacing file.",
-    "Download selected items as ZIP": "Download selected items as ZIP",
-    "No items selected.": "No items selected.",
-    "Download started": "Download started",
-    "Error downloading selected items.": "Error downloading selected items.",
-    "Remove current icon": "Remove current icon",
-    "This icon will show for the link displayed as a tool on the course homepage.": "This icon will show for the link displayed as a tool on the course homepage.",
-    "The icon must be 120x120 pixels.": "The icon must be 120x120 pixels.",
-    "Error saving the link": "Error saving the link",
-    "Enter 2FA code": "Enter 2FA code",
-    "Submit code": "Submit code",
-    "Sign up": "Sign up",
-    "2FA disabled successfully.": "2FA disabled successfully.",
-    "Passwords do not match": "Passwords do not match",
-    "Password updated successfully": "Password updated successfully",
-    "Update settings": "Update settings",
-    "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
-    "QR code for 2FA": "QR code for 2FA",
-    "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Please wait, this could take a while...": "Veuillez patienter, cela pourrait prendre un certain temps...",
+    "Replace (files only)": "Remplacer (fichiers uniquement)",
+    "Select replacement file": "S\u00e9lectionnez le fichier de remplacement",
+    "No file selected.": "Aucun fichier s\u00e9lectionn\u00e9.",
+    "Only files can be replaced.": "Seuls les fichiers peuvent \u00eatre remplac\u00e9s.",
+    "Error replacing file.": "Erreur lors du remplacement du fichier.",
+    "Download selected items as ZIP": "T\u00e9l\u00e9charger les \u00e9l\u00e9ments s\u00e9lectionn\u00e9s en ZIP",
+    "No items selected.": "Aucun \u00e9l\u00e9ment s\u00e9lectionn\u00e9.",
+    "Download started": "T\u00e9l\u00e9chargement commenc\u00e9",
+    "Error downloading selected items.": "Erreur lors du t\u00e9l\u00e9chargement des \u00e9l\u00e9ments s\u00e9lectionn\u00e9s.",
+    "Remove current icon": "Supprimer l'ic\u00f4ne actuelle",
+    "This icon will show for the link displayed as a tool on the course homepage.": "Cette ic\u00f4ne s'affichera pour le lien pr\u00e9sent\u00e9 comme un outil sur la page d'accueil du cours.",
+    "The icon must be 120x120 pixels.": "L'ic\u00f4ne doit \u00eatre de 120x120 pixels.",
+    "Error saving the link": "Erreur lors de l'enregistrement du lien",
+    "Enter 2FA code": "Entrez le code 2FA",
+    "Submit code": "Soumettre le code",
+    "Sign up": "Inscrivez-vous",
+    "2FA disabled successfully.": "L'authentification \u00e0 deux facteurs a \u00e9t\u00e9 d\u00e9sactiv\u00e9e.",
+    "Passwords do not match": "Les mots de passe ne correspondent pas",
+    "Password updated successfully": "Mot de passe mis \u00e0 jour avec succ\u00e8s",
+    "Update settings": "Mettre \u00e0 jour les param\u00e8tres",
+    "Scan the QR code to enable 2FA": "Scannez le code QR pour activer l'authentification \u00e0 deux facteurs",
+    "QR code for 2FA": "Code QR pour l'authentification \u00e0 deux facteurs",
+    "Private course": "Cours priv\u00e9",
+    "Not subscribed": "Non inscrit"
 }
