--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -35,6 +35,7 @@
     "Signed in as": "Signed in as",
     "Settings": "\u8a2d\u5b9a",
     "Sign out": "Sign out",
+    "My sessions": "\u79c1\u306e\u30bb\u30c3\u30b7\u30e7\u30f3",
     "Events": "\u30a4\u30d9\u30f3\u30c8",
     "My progress": "\u9032\u884c\u72b6\u6cc1",
     "Sessions": "Sessions",
@@ -226,9 +227,11 @@
     "Your skill ranking": "Your skill ranking",
     "My profile": "My profile",
     "Social groups": "\u30bd\u30fc\u30b7\u30e3\u30eb \u30b0\u30eb\u30fc\u30d7",
+    "Write new comment": "\u65b0\u3057\u3044\u30b3\u30e1\u30f3\u30c8\u3092\u66f8\u304f",
     "The comment is required": "The comment is required",
     "Comments": "\u30b3\u30e1\u30f3\u30c8",
     "Mark as promoted message": "Mark as promoted message",
+    "What are you thinking about?": "\u4f55\u3092\u8003\u3048\u3066\u3044\u307e\u3059\u304b\uff1f",
     "Write something to {0}": "Write something to {0}",
     "Switch to student view": "\u5b66\u751f\u8868\u793a",
     "Switch to teacher view": "\u6559\u54e1\u8868\u793a",
@@ -363,6 +366,7 @@
     "Receiver profile picture": "Receiver profile picture",
     "Carbon copy receiver profile picture": "Carbon copy receiver profile picture",
     "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:": "In order to enable the automatic version checking you have to register your portal on chamilo.org. The information obtained by clicking this button is only for internal use and only aggregated data will be publicly available (total number of portals, total number of Chamilo course, total number of Chamilo users, ...) (see {0}). When registering you will also appear on the worldwide list ({1}). If you do not want to appear in this list you have to check the checkbox below. The registration is as easy as it can be: you only have to click this button:",
+    "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "\u30ea\u30b9\u30c8\u306b\u3054\u4f7f\u7528\u306e\u8a00\u8a9e\u304c\u898b\u3064\u304b\u3089\u306a\u3044\u5834\u5408\u306f\u3001\u7ffb\u8a33\u8005\u3068\u3057\u3066\u306e\u3054\u5354\u529b\u3092\u304a\u9858\u3044\u3057\u307e\u3059\u3002info@chamilo.org\u307e\u3067\u3054\u9023\u7d61\u304f\u3060\u3055\u3044\u3002",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Continue with %s": "Continue with {0}",
     "Change Password": "Change Password",
