--- a/assets/locales/nl.json
+++ b/assets/locales/nl.json
@@ -45,6 +45,7 @@
     "Settings": "Cursuseigenschappen",
     "Sign out": "Sign out",
     "My sessions": "Mijn sessies",
+    "Events": "Evenementen",
     "My progress": "Mijn status",
     "Users": "Gebruikers",
     "Courses": "Leerpaden",
@@ -112,6 +113,7 @@
     "Cc": "Cc",
     "User": "Gebruikers",
     "Sent date": "Datum van verzending",
+    "Sent": "Verzonden",
     "Attachments": "Bijlagen",
     "You don't have any course content yet.": "You don't have any course content yet.",
     "You don't have any course yet.": "You don't have any course yet.",
@@ -151,7 +153,7 @@
     "Start Date": "Startdatum",
     "No course available": "geen cursus",
     "There are no sessions available": "Er zijn geen sessies beschikbaar",
-    "Loading courses. Please wait.": "Loading courses. Please wait.",
+    "Loading courses. Please wait.": "Cursussen laden. Even geduld a.u.b.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
     "Send diagnostic finalization message": "Send diagnostic finalization message",
@@ -328,6 +330,7 @@
     "Demo": "Demo",
     "Category name": "Categorietitel",
     "Save category": "Save category",
+    "Category saved": "Categorie opgeslagen",
     "URL": "URL",
     "Link name": "Naam",
     "Show link on course homepage": "Toon link op cursushoofdpagina",
@@ -389,6 +392,7 @@
     "You can see examples of how chamilo will look here": "You can see examples of how chamilo will look here",
     "Buttons": "Buttons",
     "Button": "Button",
+    "Disabled": "Uitgeschakeld",
     "Secondary": "secundair",
     "Tertiary": "Tertiary",
     "Success": "Succes",
@@ -420,6 +424,7 @@
     "Learn more about Chamilo and its use, official references links": "Learn more about Chamilo and its use, official references links",
     "Version check enabled": "Versieverificatie ingeschakeld",
     "Version check": "Versiecontrole",
+    "Hide campus from public platforms list": "Verberg campus van openbare platformlijst",
     "Assignment created": "Assignment created",
     "Create assignment": "Opdracht aanmaken",
     "Assignment updated": "Assignment updated",
@@ -501,6 +506,7 @@
     "Personal Data: Introduction": "Personal Data: Introduction",
     "Terms and Conditions": "Algemene voorwaarden",
     "Read the Terms and Conditions": "Lees de algemene voorwaarden",
+    "Legal agreement accepted": "Juridische overeenkomst geaccepteerd",
     "Date": "Datum",
     "Why you want to delete your Legal Agreement": "Why you want to delete your Legal Agreement",
     "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible": "Please tell us why you want to withdraw the rights you previously gave us, to let us make it in the smoothest way possible",
@@ -548,10 +554,10 @@
     "Select the destination folder": "Select the destination folder",
     "Select a folder": "Select a folder",
     "Move document": "Verplaats document",
-    "Reminders": "Reminders",
-    "Add reminder": "Add reminder",
-    "Update introduction links": "Update introduction links",
-    "Conference Room": "Conference Room",
+    "Reminders": "Herinneringen",
+    "Add reminder": "Herinnering toevoegen",
+    "Update introduction links": "Introductielinks bijwerken",
+    "Conference Room": "Vergaderzaal",
     "Please wait, this could take a while...": "Please wait, this could take a while...",
     "Replace (files only)": "Replace (files only)",
     "Select replacement file": "Select replacement file",
@@ -566,7 +572,7 @@
     "This icon will show for the link displayed as a tool on the course homepage.": "This icon will show for the link displayed as a tool on the course homepage.",
     "The icon must be 120x120 pixels.": "The icon must be 120x120 pixels.",
     "Error saving the link": "Error saving the link",
-    "Enter 2FA code": "Enter 2FA code",
+    "Enter 2FA code": "Voer 2FA-code in",
     "Submit code": "Submit code",
     "Sign up": "Sign up",
     "2FA disabled successfully.": "2FA disabled successfully.",
@@ -575,6 +581,6 @@
     "Update settings": "Update settings",
     "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
     "QR code for 2FA": "QR code for 2FA",
-    "Private course": "Private course",
+    "Private course": "Priv\u00e9cursus",
     "Not subscribed": "Not subscribed"
 }
