--- a/assets/locales/de.json
+++ b/assets/locales/de.json
@@ -156,7 +156,7 @@
     "Start Date": "Anfangsdatum",
     "No course available": "kein Kurs verf\u00fcgbar",
     "There are no sessions available": "Keine Kurs-Sessions verf\u00fcgbar",
-    "Loading courses. Please wait.": "Loading courses. Please wait.",
+    "Loading courses. Please wait.": "Lade Kurse. Bitte warten.",
     "Loading sessions. Please wait.": "Loading sessions. Please wait.",
     "There is no terms that matches the search: {searchTerm}": "There is no terms that matches the search: {searchTerm}",
     "Send diagnostic finalization message": "Senden Sie die Abschlussnachricht zur Diagnose",
@@ -327,8 +327,8 @@
     "Database Host": "Datenbankhost",
     "Database Login": "DB Username",
     "Database Password": "DB Passwort",
-    "Step 7 - Installation process execution": "Step 7 - Installation process execution",
-    "Step 7 - Update process execution": "Step 7 - Update process execution",
+    "Step 7 - Installation process execution": "Schritt 7 - Ausf\u00fchrung des Installationsprozesses",
+    "Step 7 - Update process execution": "Schritt 7 - Ausf\u00fchrung des Aktualisierungsprozesses",
     "Security advice": "Ratschlag zur Sicherheit",
     "Menu": "Men\u00fc",
     "Created with Chamilo copyright year": "Erstellt mit Chamilo \u00a9 {0}",
@@ -447,7 +447,7 @@
     "Cancel": "Abbruch",
     "Event": "Event",
     "Are you sure you want to delete this event?": "Are you sure you want to delete this event?",
-    "Edit introduction": "Edit introduction",
+    "Edit introduction": "Einf\u00fchrung bearbeiten",
     "Show all": "Alles zeigen",
     "Hide all": "Alle ausblenden",
     "Sort": "Sortieren",
@@ -557,19 +557,19 @@
     "A database with the same name <b>already exists</b>.": "Eine Datenbank mit dem gleichen Namen <b>existiert bereits</b>!",
     "To protect your site, make the whole %s directory read-only (chmod -R 0555 on Linux) and delete the %s directory.": "Um Ihre Installation zu sch\u00fctzen, setzen Sie das Verzeichnis {0} auf nur-lesen (oder chmod 0555 auf Linux-basierenden Systemen). Anschlie\u00dfend bitte das Verzeichnis {1} l\u00f6schen.",
     "Cannot find your language in the list? Contact us at info@chamilo.org to contribute as a translator.": "Ihre Sprache nicht in der Liste gefunden? Bewerben Sie sich unter info@chamilo.org als \u00dcbersetzer.",
-    "Please read the following requirements thoroughly.": "Please read the following requirements thoroughly.",
+    "Please read the following requirements thoroughly.": "Bitte lesen Sie die folgenden Anforderungen gr\u00fcndlich durch.",
     "Recommended settings for your server configuration. These settings are set in the php.ini configuration file on your server.": "Empfohlene Einstellungen f\u00fcr die Konfiguration Ihres Servers. Diese Einstellungen werden in der php.ini Datei auf Ihrem Server vorgenommen.",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)": "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface)",
     "Chamilo is free software distributed under the GNU General Public licence (GPL).": "Chamilo ist freie Software, die unter der GNU General Public Licence angeboten wird.",
     "Dear user,<br />\n<br />You are about to start using one of the best open-source e-learning platform on the market. Like many other open-source project, this project is backed up by a large community of students, teachers, developers and content creators who would like to promote the project better.<br />\n<br />\nBy knowing a little bit more about you, one of our most important users, who will manage this e-learning system, we will be able to let people know that our software is used and let you know when we organize events that might be relevant to you.<br />\n<br />\nBy filling this form, you accept that the Chamilo association or its members might send you information by e-mail about important events or updates in the Chamilo software or community. This will help the community grow as an organized entity where information flow, with a permanent respect of your time and your privacy.<br />\n<br />\nPlease note that you are <b>not required</b> to fill this form. If you want to remain anonymous, we will loose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click \"Next\".<br /><br />": "Hallo,<br />\n<br />\nSie sind dabei eine der besten Open Source E-Learning Plattformen auf dem Markt  zu starten. Wie viele andere Open Source Projekte, basiert dieses Projekt auf einer gro\u00dfen Community von Studenten, Dozenten, Lehrern, Entwicklern und Autoren die alle bem\u00fcht sind, das Projekt bekannt zu machen.<br /><br />\nWenn wir etwas mehr von Ihnen wissen, denn Sie sind einer unsere wichtigsten User, der Sie dieses E-Learning-System verwalten, k\u00f6nnen wir andere wissen lassen, dass Sie unsere Software benutzen und Sie dar\u00fcber informieren, wenn wir Events organisieren, die vielleicht f\u00fcr Sie wichtig sein k\u00f6nnten.<br /><br />\n\nMit dem Ausf\u00fcllen dieses Formulars akzeptieren Sie, das die Chamilo Association oder ihre Mitgleider Ihnen Informationen per Email zu senden darf, soweit es sich um Events der Chamilo Community oder Updates der Chamilo-Software handelt. Dies hilft der Community als Organsation zu wachsen, die st\u00e4ndig bem\u00fcht ist Ihre zeit und Ihre Privatsph\u00e4re zu achten und zu respektieren.<br />\n<br />\nBitte beachten Sie, das <b>nicht verpflichtet</b> sind, dieses Formular auszuf\u00fcllen.Wenn Sie anonym bleiben wollen, haben Sie keine M\u00f6glichkeit die Vorteile eines registrierten Portal-Administrators zu nutzen, aber wir respektieren Ihre Entscheidung. Lassen Sie dann einfach dieses Formular leer und klicken Sie auf\"Weiter\".<br /><br />",
     "The install script will create (or use) the Chamilo database using the database name given here. Please make sure the user you give has the right to create the database by the name given here. If a database with this name exists, it will be overwritten. Please do not use the root user as the Chamilo database user. This can lead to serious security issues.": "Der Installatioonprozess erstellt die Datenbank. Chamilo legt mehrere Datenbanken an (au\u00dfer wenn Sie die Option \"eine\" w\u00e4hlen). Bei vielen Providern kann nur eine begrenzte Anzahl von Datenbanken angelegt werden",
     "The install script will erase all tables of the selected database. We heavily recommend you do a full backup of them before confirming this last install step.": "Das Install-Script wird alle Tabellen der ausgew\u00e4hlten Datenbanken l\u00f6schen. Es wird vorgeschlagen, unbedingt ein Backup der Datenbanken zu erstellen (sofern gew\u00fcnscht), bevor dieser letzte Schritt best\u00e4tigt wird.",
-    "Continue with %s": "Continue with {0}",
+    "Continue with %s": "Fahren Sie mit {0} fort",
     "Change Password": "Kennwort \u00e4ndern",
     "All Messages": "Alle Nachrichten",
     "Promoted Messages": "Gesponserte Nachrichten",
     "Are you sure you want to delete %s?": "Sind Sie sicher, dass Sie {0} l\u00f6schen m\u00f6chten?",
-    "%s's picture": "{0}'s picture",
+    "%s's picture": "{0}'s Bild",
     "+%d": "+{0}",
     "%d minutes before": "{0} Minuten vorher",
     "%d hours before": "{0} Stunden vorher",
@@ -582,29 +582,29 @@
     "Add reminder": "Erinnerung hinzuf\u00fcgen",
     "Update introduction links": "Link im Text aktualisieren",
     "Conference Room": "Konferenzraum",
-    "Please wait, this could take a while...": "Please wait, this could take a while...",
-    "Replace (files only)": "Replace (files only)",
-    "Select replacement file": "Select replacement file",
-    "No file selected.": "No file selected.",
-    "Only files can be replaced.": "Only files can be replaced.",
-    "Error replacing file.": "Error replacing file.",
-    "Download selected items as ZIP": "Download selected items as ZIP",
-    "No items selected.": "No items selected.",
-    "Download started": "Download started",
-    "Error downloading selected items.": "Error downloading selected items.",
-    "Remove current icon": "Remove current icon",
-    "This icon will show for the link displayed as a tool on the course homepage.": "This icon will show for the link displayed as a tool on the course homepage.",
-    "The icon must be 120x120 pixels.": "The icon must be 120x120 pixels.",
-    "Error saving the link": "Error saving the link",
-    "Enter 2FA code": "Enter 2FA code",
-    "Submit code": "Submit code",
-    "Sign up": "Sign up",
-    "2FA disabled successfully.": "2FA disabled successfully.",
-    "Passwords do not match": "Passwords do not match",
-    "Password updated successfully": "Password updated successfully",
-    "Update settings": "Update settings",
-    "Scan the QR code to enable 2FA": "Scan the QR code to enable 2FA",
-    "QR code for 2FA": "QR code for 2FA",
-    "Private course": "Private course",
-    "Not subscribed": "Not subscribed"
+    "Please wait, this could take a while...": "Bitte warten Sie, dies k\u00f6nnte eine Weile dauern...",
+    "Replace (files only)": "Ersetzen (nur Dateien)",
+    "Select replacement file": "W\u00e4hlen Sie die Ersatzdatei",
+    "No file selected.": "Keine Datei ausgew\u00e4hlt.",
+    "Only files can be replaced.": "Nur Dateien k\u00f6nnen ersetzt werden.",
+    "Error replacing file.": "Fehler beim Ersetzen der Datei.",
+    "Download selected items as ZIP": "Herunterladen ausgew\u00e4hlter Elemente als ZIP",
+    "No items selected.": "Keine Elemente ausgew\u00e4hlt.",
+    "Download started": "Download gestartet",
+    "Error downloading selected items.": "Fehler beim Herunterladen der ausgew\u00e4hlten Elemente.",
+    "Remove current icon": "Aktuelles Symbol entfernen",
+    "This icon will show for the link displayed as a tool on the course homepage.": "Dieses Symbol wird f\u00fcr den Link angezeigt, der als Werkzeug auf der Startseite des Kurses dargestellt wird.",
+    "The icon must be 120x120 pixels.": "Das Symbol muss 120x120 Pixel gro\u00df sein.",
+    "Error saving the link": "Fehler beim Speichern des Links",
+    "Enter 2FA code": "Geben Sie den 2FA-Code ein",
+    "Submit code": "Code einreichen",
+    "Sign up": "Anmelden",
+    "2FA disabled successfully.": "2FA erfolgreich deaktiviert.",
+    "Passwords do not match": "Passw\u00f6rter stimmen nicht \u00fcberein",
+    "Password updated successfully": "Passwort erfolgreich aktualisiert",
+    "Update settings": "Einstellungen aktualisieren",
+    "Scan the QR code to enable 2FA": "Scannen Sie den QR-Code, um die Zwei-Faktor-Authentifizierung zu aktivieren",
+    "QR code for 2FA": "QR-Code f\u00fcr 2FA",
+    "Private course": "Privatkurs",
+    "Not subscribed": "Nicht abonniert"
 }
