--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2025-03-31 12:26+0000\n"
+"PO-Revision-Date: 2025-04-02 17:25+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: Spanish <https://translation.chamilo.org/projects/chamilo/"
 "messages/es/>\n"
@@ -29020,3 +29020,30 @@ msgstr "Inscripciones de usuarios por creador"
 
 msgid "Select replacement file"
 msgstr "Seleccione el archivo de reemplazo"
+
+msgid "End of test"
+msgstr "Fin del ejercicio"
+
+msgid "Introduction to registration"
+msgstr "Introducción al registro"
+
+msgid "Welcome to the registration process."
+msgstr "Bienvenido al proceso de registro."
+
+msgid "Other (custom URL)"
+msgstr "Otro (URL personalizada)"
+
+msgid "Custom URL"
+msgstr "URL personalizada"
+
+msgid "On success"
+msgstr "Al completar exitosamente"
+
+msgid "On failure"
+msgstr "Al fallar"
+
+msgid "Select destination"
+msgstr "Seleccione el destino"
+
+msgid "Repeat question"
+msgstr "Hacer la pregunta otra vez"
